--- a/linux/packaging/debian/changelog
+++ b/linux/packaging/debian/changelog
@@ -1,6 +1,7 @@
-cylonix (1.0.8-0-1) unstable; urgency=low
+cylonix (1.0.8-0-2) unstable; urgency=low
 
+  * Subnet routing support 2025/07/23
   * Exit node support 2025/07/20
   * Initial release 2025/06/20
 
- -- Cylonix authors <contact@cylonix.io>  Sun, 20 Jul 2025 10:00:00 +0000
+ -- Cylonix authors <contact@cylonix.io>  Thu, 23 Jul 2025 10:00:00 +0000
