--- a/linux/packaging/debian/changelog
+++ b/linux/packaging/debian/changelog
@@ -1,7 +1,5 @@
-cylonix (1.0.8-0-2) unstable; urgency=low
+cylonix (1.0.9-0-1) unstable; urgency=low
 
-  * Subnet routing support 2025/07/23
-  * Exit node support 2025/07/20
-  * Initial release 2025/06/20
+  * WireGuard Exit Node support 2025/11/30
 
- -- Cylonix authors <contact@cylonix.io>  Thu, 23 Jul 2025 10:00:00 +0000
+ -- Cylonix authors <contact@cylonix.io>  Sat, Nov 30 2025 10:00:00 +0000
