--- a/linux/packaging/debian/changelog
+++ b/linux/packaging/debian/changelog
@@ -1,5 +1,6 @@
-cylonix (1.0.9-0-1) unstable; urgency=low
+cylonix (1.0.9-0-2) unstable; urgency=low
 
   * WireGuard Exit Node support 2025/11/30
+  * Shared node support 2026/01/16
 
- -- Cylonix authors <contact@cylonix.io>  Sat, Nov 30 2025 10:00:00 +0000
+ -- Cylonix authors <contact@cylonix.io>  Sat, JAN 16 2026 10:00:00 +0000
